Add middileware for move and merge

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Try2048</title>
   </head>
   <body>
-    Hello by Try2048.
+    <h1>Welcome to Try2048.</h1>
+    <div id="board-container"></div>
   </body>
   <script src="./try2048.js"></script>
 </html>
