Make a savepoint to former changes.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Try2048</title>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <h1>Welcome to Try2048.</h1>
     <div id="board-container"></div>
   </body>
+  <script>
+    var BOARD_CANTAINER_ID      = "board-container";
+    var BOARD_TILE_SIDE_LENTH   = 100;
+    var BOARD_TILE_MARGIN       = 10;
+    var BOARD_TILE_MOVE_LAST    = 0.5;
+    var BOARD_TILE_MERGE_LAST   = 0.2;
+  </script>
   <script src="./try2048.js"></script>
 </html>
