Update script a lot

--- a/index.html
+++ b/index.html
@@ -3,20 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Try2048</title>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <h1>Welcome to Try2048.</h1>
     <div id="board-container"></div>
   </body>
-  <script>
-    var CONFIG = {
-      boardSize: 4,
-      moveDuration: 500,
-      appearDuration: 200,
-      containerID: "board-container",
-      tileSize: 100,
-      tileMargin: 10,
-    };
-  </script>
   <script src="./try2048.js"></script>
 </html>
