--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
     <div id="page-container">
       <h1>Welcome to Try2048.</h1>
       <h3>Join the number to reach 2048!</h3>
+
       <div id="score-container">
           Score <div id="score-message">0</div>
       </div>
+      <div id="restart-container">
+          <button id="restart-button">Restart</button>
+      </div>
+      
       <div id="board-container">
         <div id="board-game-over-message" style="display: none;">Game Over!</div>
       </div>
