Add config file and refactor Trigger a little

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div id="board-game-over-message" style="display: none;">Game Over!</div>
       </div>
     </div>
+    <script src="./config.js"></script>    
     <script src="./try2048.js"></script>
   </body>
 </html>
